feat: configure build type
Add a command to choose the build type for the current bot project (Dev,
Release, or Debug), and use the CMakeLists.txt of the project to produce
a build system.

--- a/package.json
+++ b/package.json
@@ -19,8 +19,21 @@
         "command": "codingame.createNewProject",
         "title": "Create New Project",
         "category": "codingame"
+      },
+      {
+        "command": "codingame.configureBuild",
+        "title": "Configure Build",
+        "category": "codingame"
       }
     ],
+    "menus": {
+      "commandPalette": [
+        {
+          "command": "codingame.configureBuild",
+          "when": "workspaceFolderCount > 0"
+        }
+      ]
+    },
     "configuration": {
       "title": "CodinGame",
       "properties": {
