--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,10 +1,11 @@
 .vscode/**
 .vscode-test/**
-out/test/**
-src/**
+src/
+data/
 .gitignore
 .yarnrc
-vsc-extension-quickstart.md
+tsconfig.json
+webpack.config.js
 **/tsconfig.json
 **/.eslintrc.json
 **/*.map
