--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
   "name": "codingame",
-  "displayName": "codingame",
+  "displayName": "CodinGame",
+  "publisher": "VirtualAtom",
   "description": "Improve your CodinGame bot programming efficiency",
-  "version": "0.0.1",
+  "version": "1.0.0",
+  "license": "MIT",
   "engines": {
     "vscode": "^1.52.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/tdelame/codingame_vscode_extension"
   },
   "categories": [
     "Other"
@@ -18,27 +24,27 @@
       {
         "command": "codingame.createNewProject",
         "title": "Create New Project",
-        "category": "codingame"
+        "category": "CodinGame"
       },
       {
         "command": "codingame.configureBuild",
         "title": "Configure Build",
-        "category": "codingame"
+        "category": "CodinGame"
       },
       {
         "command": "codingame.saveCurrentVersion",
         "title": "Save Current Version",
-        "category": "codingame"
+        "category": "CodinGame"
       },
       {
         "command": "codingame.getCodinGamerId",
         "title": "Get CodinGamer Id",
-        "category": "codingame"
+        "category": "CodinGame"
       },
       {
         "command": "codingame.sendBotCode",
         "title": "Send Your Bot Code to CodinGame",
-        "category": "codingame"
+        "category": "CodinGame"
       }
     ],
     "menus": {
@@ -114,17 +120,18 @@
   "devDependencies": {
     "@types/glob": "^7.1.3",
     "@types/mocha": "^8.0.4",
-    "@types/node": "^12.11.7",
-    "@types/vscode": "^1.53.0",
-    "@types/node-fetch": "1.6.9",
     "@typescript-eslint/eslint-plugin": "^4.14.1",
     "@typescript-eslint/parser": "^4.14.1",
-    "esm": "3.2.25",
     "eslint": "^7.19.0",
     "glob": "^7.1.6",
-    "mocha": "^8.2.1",
+    "mocha": "^8.2.1"
+  },
+  "dependencies": {
+    "@types/node": "^12.11.7",
+    "@types/node-fetch": "1.6.9",
+    "@types/vscode": "^1.53.0",
+    "esm": "3.2.25",
     "node-fetch-cookies": "^2.0.1",
-    "typescript": "^4.1.3",
-    "vscode-test": "^1.5.0"
+    "typescript": "^4.1.3"
   }
 }
