--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "codingame",
   "displayName": "CodinGame",
   "publisher": "VirtualAtom",
-  "description": "Improve your CodinGame bot programming efficiency",
-  "version": "1.0.2",
+  "description": "Improve your CodinGame bot programming efficiency in VSCode",
+  "version": "2.0.1",
   "license": "MIT",
   "engines": {
-    "vscode": "^1.52.0"
+    "vscode": "^1.88.0"
   },
   "repository": {
     "type": "git",
@@ -15,10 +15,8 @@
   "categories": [
     "Other"
   ],
-  "activationEvents": [
-    "*"
-  ],
-  "main": "./out/extension.js",
+  "activationEvents": [],
+  "main": "./dist/extension.js",
   "contributes": {
     "commands": [
       {
@@ -40,16 +38,6 @@
         "command": "codingame.saveCurrentVersion",
         "title": "Save Current Version",
         "category": "CodinGame"
-      },
-      {
-        "command": "codingame.getCodinGamerId",
-        "title": "Get CodinGamer Id",
-        "category": "CodinGame"
-      },
-      {
-        "command": "codingame.sendBotCode",
-        "title": "Send Your Bot Code to CodinGame",
-        "category": "CodinGame"
       }
     ],
     "menus": {
@@ -60,10 +48,6 @@
         },
         {
           "command": "codingame.saveCurrentVersion",
-          "when": "workspaceFolderCount > 0"
-        },
-        {
-          "command": "codingame.sendBotCode",
           "when": "workspaceFolderCount > 0"
         }
       ]
@@ -110,48 +94,33 @@
           "type": "string",
           "default": null,
           "description": "Specifies your CodinGamer Id"
-        },
-        "codinGame.gamerEmail": {
-          "type": "string",
-          "format": "email",
-          "default": null,
-          "description": "Specifies the email associated to your CodinGame account"
-        },
-        "codinGame.gameId": {
-          "type": "string",
-          "default": null,
-          "description": "Specifies the game ID of your current bot"
-        },
-        "codinGame.isMulti": {
-          "type": "boolean",
-          "default": true,
-          "description": "Specifies if the current bot is for a multiplayer game on CodinGame"
         }
       }
     }
   },
   "scripts": {
-    "vscode:prepublish": "npm run compile",
-    "compile": "tsc -p ./",
-    "watch": "tsc -watch -p ./",
-    "pretest": "npm run compile && npm run lint",
-    "lint": "eslint src --ext ts"
+    "vscode:prepublish": "npm run package",
+    "compile": "webpack",
+    "watch": "webpack --watch",
+    "package": "webpack --mode production --devtool hidden-source-map",
+    "compile-tests": "tsc -p . --outDir out",
+    "watch-tests": "tsc -p . -w --outDir out",
+    "pretest": "npm run compile-tests && npm run compile && npm run lint",
+    "lint": "eslint src --ext ts",
+    "test": "vscode-test"
   },
   "devDependencies": {
-    "@types/glob": "^7.1.3",
-    "@types/mocha": "^8.0.4",
-    "@typescript-eslint/eslint-plugin": "^4.14.1",
-    "@typescript-eslint/parser": "^4.14.1",
-    "eslint": "^7.19.0",
-    "glob": "^7.1.6",
-    "mocha": "^8.2.1"
-  },
-  "dependencies": {
-    "@types/node": "^12.11.7",
-    "@types/node-fetch": "1.6.9",
-    "@types/vscode": "^1.53.0",
-    "esm": "3.2.25",
-    "node-fetch-cookies": "^2.0.1",
-    "typescript": "^4.1.3"
+    "@types/vscode": "^1.88.0",
+    "@types/mocha": "^10.0.6",
+    "@types/node": "18.x",
+    "@typescript-eslint/eslint-plugin": "^7.7.1",
+    "@typescript-eslint/parser": "^7.7.1",
+    "eslint": "^8.57.0",
+    "typescript": "^5.4.5",
+    "ts-loader": "^9.5.1",
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4",
+    "@vscode/test-cli": "^0.0.8",
+    "@vscode/test-electron": "^2.3.9"
   }
 }
